# PHiLiP

./: CMakeLists.txt
src/: CMakeLists.txt
src/flow_solver_cases/: 1D_burgers_rewienski_snapshot.cpp  1D_burgers_rewienski_snapshot.h  1d_burgers_viscous_snapshot.cpp  1d_burgers_viscous_snapshot.h  CMakeLists.txt  flow_solver_case_base.cpp  flow_solver_case_base.h  periodic_cube_flow.cpp  periodic_cube_flow.h
src/functional/: functional.cpp  functional.h
src/ode_solver/: ode_solver_base.cpp  ode_solver_factory.h  pod_galerkin_ode_solver.cpp  pod_galerkin_ode_solver.h  pod_petrov_galerkin_ode_solver.cpp  pod_petrov_galerkin_ode_solver.h
src/parameters/: parameters_flow_solver.cpp  parameters_flow_solver.h  parameters_manufactured_solution.cpp  parameters_manufactured_solution.h  parameters_reduced_order.cpp  parameters_reduced_order.h
src/reduced_order/: CMakeLists.txt  adaptive_sampling.cpp  adaptive_sampling.h  delaunay.cpp  delaunay.h  full_order_solution.cpp  full_order_solution.h  levenberg_marquardt.cpp  levenberg_marquardt.h  pod_adaptation.cpp  pod_adaptation.h  pod_adaptation_base.cpp  pod_adaptation_base.h  pod_adaptation_interface.h  pod_basis.h  pod_basis_interface.h  pod_basis_online.cpp  pod_basis_online.h  pod_basis_sensitivity.cpp  pod_basis_sensitivity.h  pod_basis_sensitivity_types.cpp  pod_basis_sensitivity_types.h  pod_basis_state.cpp  pod_basis_state.h  pod_basis_types.cpp  pod_basis_types.h  pod_error_adaptation.h  pod_fine_basis_adaptation.cpp  pod_fine_basis_adaptation.h  pod_full_dim_adaptation.cpp  pod_full_dim_adaptation.h  pod_galerkin_adaptation.cpp  pod_galerkin_adaptation.h  pod_interfaces.h  pod_petrov_galerkin_adaptation.cpp  pod_petrov_galerkin_adaptation.h  rbf_interpolation.cpp  rbf_interpolation.h  reduced_order_solution.cpp  reduced_order_solution.h  (+4 more)
(+36 files in other folders)
